--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -173,8 +173,11 @@
   <!-- CONTENT -->
   <div class="content">
     <div class="ad">
-      <div class="img">Imagem</div>
-      <div class="graph">Gráfico</div>
+      <div class="img"></div>
+
+      <div class="graph">
+        <img src="/assets/graphy.png" alt="" />
+      </div>
     </div>
 
     <section>
@@ -322,7 +325,7 @@
               </div>
 
               <div class="name">
-                <h3>Prof. Felipe</h3>
+                <h3>Prof. Lídia</h3>
                 <h4>Professor</h4>
                 <h5>11 maio 2023</h5>
               </div>
