--- a/my-app/src/app/components/create-user/create-user.component.html
+++ b/my-app/src/app/components/create-user/create-user.component.html
@@ -14,16 +14,16 @@
 
         <div class="input">
             <i class='bx bxs-envelope' style='color:#8115f1'></i>
-            <input type="text" name="login" id="login" placeholder="E-mail" [(ngModel)]="user">
+            <input type="text" name="login" id="login" placeholder="E-mail">
         </div>
         <div class="input">
             <i class='bx bxs-lock-alt' style='color:#8115f1'></i>
-            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd">
+            <input type="password" name="password" id="password" placeholder="Password">
             <i class='bx bx-low-vision' style='color:#8115f1'></i>
         </div>
         <div class="input">
             <i class='bx bxs-lock-alt' style='color:#8115f1'></i>
-            <input type="double" name="double" id="double" placeholder="Password" [(ngModel)]="double">
+            <input type="double" name="double" id="double" placeholder="Password">
             <i class='bx bx-low-vision' style='color:#8115f1'></i>
         </div>
 
