--- a/my-app/src/app/components/equipe/equipe.component.html
+++ b/my-app/src/app/components/equipe/equipe.component.html
@@ -1,1 +1,30 @@
-<p>equipe works!</p>
+
+<div class="container">
+
+    <form action="#">
+
+<div class="form-group">
+    <label for="txtNome">Nome</label>
+    <input type="text" name="txtNome" id="txtNome" placeholder="Digite o nome da tarefa"/>
+    
+
+
+    <label for="txtDesc"> Cargo </label>/label>
+    <input type="text" name="txtDesc" id="txtDesc" placeholder="Digite a descrição da tarefa" />
+    
+
+    <div class="button">
+    <button>Cancelar</button>
+    <button>Cadastrar</button>
+</div>
+
+
+</div>
+
+    </form>
+    
+
+
+
+</div>
+
