--- a/my-app/src/app/components/login/login.component.html
+++ b/my-app/src/app/components/login/login.component.html
@@ -17,11 +17,10 @@
 
         <div class="input">
             <i class='bx bxs-envelope' style='color:#8115f1' ></i>
-            <input type="text" name="login" id="login" placeholder="E-mail" [(ngModel)]="user">
-        </div>
+            <input type="text" name="login" id="login" placeholder="E-mail" > </div>
         <div class="input">
             <i class='bx bxs-lock-alt' style='color:#8115f1' ></i>
-            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd"> 
+            <input type="password" name="password" id="password" placeholder="Password"> 
             <i class='bx bx-low-vision' style='color:#8115f1' ></i>
         </div>
 
