--- a/my-app/src/app/components/task/task.component.css
+++ b/my-app/src/app/components/task/task.component.css
@@ -116,3 +116,37 @@ img {
         transform: translateY(0px);
     }
 }
+
+
+.msg {
+    height: 80px;
+    width:350px ;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    text-shadow: 1px 1px;
+    font-size: 22px;
+    gap: 20px;
+    border-radius: 8px;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    
+}
+
+.mssg{
+    color: red;
+    height: 100px;
+    width:350px ;
+    display: flex;
+    align-items: center;
+    text-shadow: 1px 1px;
+    font-size: 22px;
+    gap: 20px;
+    border-radius: 8px;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    background: linear-gradient(60deg, #2d3c42, rgb(78, 78, 209));
+    
+}
